<resources>
    <string name="app_name">HALAQA</string>
    <string name="addHalaqa">إضافة حلقة</string>
    <string name="showHalaqa">عرض الحلقات</string>
    <string name="students">الطلاب</string>
    <string name="halaqat">الحلقات</string>
    <string name="teachers">المعلمين</string>
    <string name="management">ادارة التحفيظ</string>
    <string name="editHalaqa">تعديل حلقة</string>
    <string name="addTeacher">إضافة معلم</string>
    <string name="viewTeacher">عرض المعلمين</string>
    <string name="editTeacher">تعديل معلم</string>
    <string name="addStudent">اضافة طالب</string>
    <string name="viewStudent">عرض الطلاب</string>
    <string name="followHifz">متابعة الحفظ</string>
    <string name="updateStudent">تعديل طالب</string>
    <string name="deleteStudent">حذف طالب</string>
    <string name="deleteTeacher">حذف معلم</string>
    <string name="deleteHalaqa">حذف حلقة</string>
    <string name="updateParentInfo">تعديل بيانات ولي أمر</string>
    <string name="title_activity_add_teacher">addTeacher</string>
    <string name="teacherName">إسم المعلم</string>
    <string name="addTeacherAdd">إضافة المعلم</string>
    <string name="lastSorah">اخر سورة</string>
    <string name="Sourah">السورة</string>
    <string name="ayahNo">الآية</string>
    <string name="sourah">السورة</string>
    <string name="chooseStudent">اختر طالب</string>
    <string name="updateHifz">تحديث الحفظ</string>
    <string name="haveBrother">لديه أخ</string>
    <string name="haveBrotherLabel">اضافة طالب لديه أخ</string>
    <string name="newStudent">طالب جديد</string>
    <string name="addTheStudent">اضافة الطالب</string>
    <string name="parentName">اسم ولي الامر</string>
    <string name="insertstudentName">اسم الطالب</string>
    <string name="studentSSN">رقم هوية الطالب</string>
    <string name="studentSSNNo">رقم جوال الطالب</string>
    <string name="insertparentSSN">رقم هوية ولي الامر</string>
    <string name="insertparentMobile">رقم جوال ولي الامر</string>
    <string name="insertstartHifz">مقدار الحفظ</string>
    <string name="studentName">اسم الطالب</string>
    <string name="insertStudentSSN">رقم هوية الطالب</string>
    <string name="startHifz">مقدار الحفظ</string>
    <string name="insertParentName">اسم ولي الامر</string>
    <string name="parentSSN">رقم هوية ولي الامر</string>
    <string name="StudentSSN">رقم جوال الطالب</string>
    <string name="parentMobile">رقم جوال ولي الامر</string>
    <string name="insertNewStudent">اضافة الطالب</string>
    <string name="insertSSNtoUpdate">رقم هوية الطالب المراد تعديله</string>
    <string name="updatedStudentName">الاسم الجديد إن وجد</string>
    <string name="updatedStudentMobile">رقم الجوال الجديد إن وجد</string>
    <string name="updatedStudentHalaqa">الحلقة الجديدة إن وجدت</string>
    <string name="noteUpdateStudent">يرجى ادخال القيمة التي يراد تعديلها فقط ، ويترك فارغا في حال عدم وجود تعديلات</string>
    <string name="btnUpdateStudent">تحديث البيانات</string>
    <string name="insertTSSNtoUpdate">رقم هوية المعلم المراد تعديله</string>
    <string name="updatedTeacherName">إسم المعلم الجديد إن وجد</string>
    <string name="updatedTeacherMobile">رقم جوال المعلم الجديد إن وجد</string>
    <string name="halaqaName">اسم الحلقة</string>
    <string name="halaqaCategory">تصنيف الحلقة ، ابتدائي او متوسط او ثانوي</string>
    <string name="halaqaTeacherSSN">رقم هوية معلم الحلقة</string>
    <string name="insertStudentSSNToDelete">ادخل رقم هوية الطالب المراد حذفه</string>
    <string name="btnDeleteStudent">حذف الطالب</string>
    <string name="insertHalaqaNameToDelete">ادخل إسم الحلقة المراد حذفها</string>
    <string name="deleteHalaqaD">حذف الحلقة</string>
    <string name="insertTeacherSSNtoDelete">ادخل رقم هوية المعلم المراد حذفه</string>
    <string name="deleteTeacherD">حذف المعلم</string>
    <string name="teacherSSN">رقم الهوية</string>
    <string name="teacherMobile">رقم الجوال</string>
    <string name="pSSNtoUpdate">رقم هوية ولي الأمر المراد تعديله</string>
    <string name="updatedParentSSN">رقم هوية ولي الأمر الجديد إن وجد</string>
    <string name="updatedParentName">إسم ولي الأمر الجديد إن وجد</string>
    <string name="updatedParentMobile">رقم جوال ولي الأمر الجديد إن وجد</string>
    <string name="chooseTeacherOfHalaqa">اختر معلم الحلقة</string>
    <string name="chooseTeacherToDelete">اختر المعلم لحذفه</string>
    <string name="mainPageLabel">إدارة حلقات التحفيظ</string>
    <string name="UpdateParentSSN">تعديل رقم الهوية لولي الأمر</string>
    <string name="UpdateParentName">تعديل اسم ولي الأمر</string>
    <string name="UpdateParentMobile">تعديل رقم جوال ولي الأمر</string>
    <string name="EnterNewParentName">ادخل اسم ولي الامر الجديد</string>
    <string name="enterNewParentMobile">ادخل رقم الجوال الجديد لولي الأمر</string>
    <string name="enterNewParentSSN">ادخل رقم الهوية الجديد لولي الأمر</string>
    <string name="title_activity_welcome">الصفحة الترحيبية</string>
    <string name="next">التالي</string>
    <string name="skip">تخطي</string>
    <string name="start">البدأ</string>

    <string name="slide_1_title">السلام عليكم ورحمة الله وبركاته !</string>
    <string name="slide_1_desc">تستطيع بسهولة إدارة تحفيظ القرآن باستخدام تطبيقنا!</string>

    <string name="slide_2_title">اشياء يجب أن تفعلها !</string>
    <string name="slide_2_desc">بسبب القيود في قاعده البيانات سننقلك الآن لأضافه معلم واحد وربطه بحلقته لكي تستطيع العمل بدون أي مشاكل إن شاء الله</string>

    <string name="slide_3_title"> فلنبدأ !</string>
    <string name="slide_3_desc"> نأمل لك تجربة ممتعة ومفيدة عند استخدام التطبيق !</string>
    <string name="editTeacherName">تعديل اسم المعلم</string>
    <string name="editTeacherMobile">تعديل رقم جوال المعلم</string>
    <string name="EditHalaqaName">تعديل اسم الحلقة</string>
    <string name="EditHalaqaTeacher">تعديل معلم الحلقة</string>
    <string name="EditHalaqaTecher">ادخل اسم معلم الحلقة</string>
    <string name="EditHalaName">ادخل اسم الحلقة</string>
    <string name="Halaqa_category">تصنيف الحلقة</string>
    <string name="hC">تصنيف الحلقة</string>
    <string name="chooseTezcherOfHalaqa">معلم الحلقة</string>

</resources>
